# move

./: .gitignore  Cargo.toml  README.md
ans/: Move.toml
ans/sources/: ans.move  names.move
aptos/: Cargo.toml  Message.mv
aptos/dapps/: Cargo.toml
aptos/transactions/: Cargo.toml
aptos/transactions/src/: lib.rs  main.rs
aptos/transactions/src/accounts/: account.rs
aptos/transactions/src/clients/: client.rs  faucet.rs  mod.rs  msg.rs
contracts/msg/: Move.toml  README.md
contracts/msg/sources/: message.move
contracts/nfts/: Move.toml
contracts/nfts/sources/: auction.move  auction_lib.move  shared_auction.move
contracts/sui/: config.yaml
contracts/sui/color/: Move.toml  README.md  sui.log.2022-08-25
contracts/sui/color/sources/: color.move
contracts/sui/hero/: Move.toml
contracts/sui/hero/sources/: hero.move
contracts/sui/red_package/: Move.toml  README.md
contracts/sui/red_package/sources/: RedPackage.move
contracts/traitcoin/sources/: MyCoin.move
eth/: Cargo.toml
eth/src/: lib.rs
eth/src/clients/: block.rs
eth/tests/: web3_client.rs
sui/clients/: Cargo.toml
sui/clients/src/: address.rs  block.rs  lib.rs  main.rs  transactions.rs  ws.rs
traitcoin/: Move.toml
traitcoin/sources/: Coin.move
