[package]
edition = "2021"
name = "clients"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "4.0.0"
futures = "0.3.23"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"
tokio = {version = "1.21.1", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.3", features = ["env-filter", "tracing-log"]}
web3 = "0.18.0"