[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = "1.0.82"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }

[dependencies.ed25519-dalek]
version = "1"
features = ["std", "serde"]