[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui"}
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0"
dirs = "4.0.0"
futures = "0.3.23"
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.3", features = ["env-filter", "tracing-log"]}
